fixed media queries of other projects

--- a/gallery.html
+++ b/gallery.html
@@ -87,7 +87,9 @@
                 <a class="nav-link" href="/publications.html">Publications</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/index.html#contact-me">Contact Me</a>
+                <a class="nav-link" href="/gallery.html#contact-me"
+                  >Contact Me</a
+                >
               </li>
             </ul>
           </div>
@@ -548,5 +550,68 @@
         </div>
       </div>
     </div>
+    <footer id="contact-me">
+      <div class="container">
+        <div class="text-muted mt-5 d-flex justify-content-between">
+          <div class="d-flex justify-content-center ms-5">
+            <div>
+              <img
+                src="/images/profile-pic.png"
+                alt=""
+                class="img-fluid d-inline p-2 m-0"
+                width="80px"
+              />
+            </div>
+            <div>
+              <p class="contact-me mt-3 me-5 pe-5">
+                Ahmad Farkhondeh <br />Industrial Designer
+              </p>
+            </div>
+          </div>
+
+          <div class="contact-me">
+            <i
+              class="fa fa-envelope email-icon pe-2 pb-2 pt-3"
+              aria-hidden="true"
+            ></i
+            >ahmadfarkhondeh1997@gmail.com
+
+            <br />
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            +989368125532
+          </div>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <div>
+            <a
+              href="https://www.linkedin.com/in/ahmad-farkhondeh/"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
+            ></a>
+          </div>
+          <div>
+            <a
+              href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
+              target="_blank"
+            >
+              <i class="fa-brands fa-researchgate m-2"></i
+            ></a>
+          </div>
+          <div>
+            <a
+              href="https://orcid.org/0009-0007-1695-1563
+"
+              target="_blank"
+            >
+              <i class="fa-brands fa-orcid m-2"></i
+            ></a>
+          </div>
+        </div>
+
+        <p class="contact-me text-center text-muted mb-5">
+          © Ahmad Farkhondeh All Rights Reserved <br />coded by Ahmad Farkhondeh
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
