--- a/projects.html
+++ b/projects.html
@@ -87,7 +87,9 @@
                 <a class="nav-link" href="/publications.html">Publications</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/index.html#contact-me">Contact Me</a>
+                <a class="nav-link" href="/projects.html#contact-me"
+                  >Contact Me</a
+                >
               </li>
             </ul>
           </div>
@@ -111,7 +113,7 @@
       <div class="project-photos pb-5">
         <div
           id="carouselExampleDark"
-          class="carousel carousel-dark slide d-block"
+          class="carousel carousel-dark slide"
           data-bs-ride="carousel"
         >
           <div class="carousel-indicators m-0">
@@ -426,6 +428,73 @@
         width="40%"
       />
     </div>
+    <footer id="contact-me">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="d-flex justify-content-center">
+              <div>
+                <img
+                  src="/images/profile-pic.png"
+                  alt=""
+                  class="img-fluid d-inline p-2 m-0"
+                  width="80px"
+                />
+              </div>
+              <div class="contact-me mt-3 text-muted">
+                Ahmad Farkhondeh <br />Industrial Designer
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4"></div>
+          <div class="col-lg-4 text-start">
+            <div class="contact-me">
+              <i
+                class="fa fa-envelope email-icon pe-1 pb-2 pt-3"
+                aria-hidden="true"
+              ></i>
+              <span class="contact-me-content"
+                >ahmadfarkhondeh1997@gmail.com</span
+              >
+              <br />
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <span class="contact-me-content"> +989368125532</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="social-links d-flex justify-content-center">
+        <div>
+          <a
+            href="https://www.linkedin.com/in/ahmad-farkhondeh/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
+          ></a>
+        </div>
+        <div>
+          <a
+            href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
+            target="_blank"
+          >
+            <i class="fa-brands fa-researchgate m-2"></i
+          ></a>
+        </div>
+        <div>
+          <a
+            href="https://orcid.org/0009-0007-1695-1563
+"
+            target="_blank"
+          >
+            <i class="fa-brands fa-orcid m-2"></i
+          ></a>
+        </div>
+      </div>
+
+      <p class="contact-me text-center text-muted mb-5">
+        © Ahmad Farkhondeh All Rights Reserved <br />coded by Ahmad Farkhondeh
+      </p>
+    </footer>
 
     <script src="/src/scripts.js"></script>
   </body>
