--- a/publications.html
+++ b/publications.html
@@ -87,7 +87,9 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/index.html#contact-me">Contact Me</a>
+                <a class="nav-link" href="/publications.html#contact-me"
+                  >Contact Me</a
+                >
               </li>
             </ul>
           </div>
@@ -129,27 +131,28 @@
         <div class="collapse" id="collapseExample">
           <div class="card card-body">
             <p>
-              <strong> <span class="big-letter">T</span></strong>he syntax of spaces is one of the significant
-              factors affecting visitors' sense of security in urban parks. Due
-              to the vitality and green nature of parks, they are expected to
-              provide more sense of peace and security to visitors than other
-              urban spaces; However, Tappeh-Bashi Park in the city of Naghadeh,
-              located in West Azarbaijan province, Iran, is a counterexample.
-              This park, despite its glory days not so far past, has become a
-              place for addicts and criminals because of a lack of surveillance,
-              ethnic conflicts, and the stoning of two people there. Recently,
-              measures have been taken by the municipality to improve the
-              security of the park, such as taking out criminals, implementing
-              some sports facilities, and planting trees, and flowers. Although
-              this has reduced the rate of crime significantly, citizens still
-              do not desire to visit this park due to their sense of fear of
-              possible crimes. The root of this issue is both subjective and
-              objective and this study's focus is on the objective aspect. The
-              purpose is to find the areas inducing a sense of fear of crime in
-              visitors in the case study by assessing the role of the objective
-              factors related to the spatial syntax of the park in both physical
-              and visual dimensions. To do so, the qualities affecting the sense
-              of fear in visitors of Tappeh-Bashi Park and their extracted
+              <strong> <span class="big-letter">T</span></strong
+              >he syntax of spaces is one of the significant factors affecting
+              visitors' sense of security in urban parks. Due to the vitality
+              and green nature of parks, they are expected to provide more sense
+              of peace and security to visitors than other urban spaces;
+              However, Tappeh-Bashi Park in the city of Naghadeh, located in
+              West Azarbaijan province, Iran, is a counterexample. This park,
+              despite its glory days not so far past, has become a place for
+              addicts and criminals because of a lack of surveillance, ethnic
+              conflicts, and the stoning of two people there. Recently, measures
+              have been taken by the municipality to improve the security of the
+              park, such as taking out criminals, implementing some sports
+              facilities, and planting trees, and flowers. Although this has
+              reduced the rate of crime significantly, citizens still do not
+              desire to visit this park due to their sense of fear of possible
+              crimes. The root of this issue is both subjective and objective
+              and this study's focus is on the objective aspect. The purpose is
+              to find the areas inducing a sense of fear of crime in visitors in
+              the case study by assessing the role of the objective factors
+              related to the spatial syntax of the park in both physical and
+              visual dimensions. To do so, the qualities affecting the sense of
+              fear in visitors of Tappeh-Bashi Park and their extracted
               indicators were evaluated by space syntax technique and through
               Depthmap software. In this research, the four qualities of
               accessibility, choice, controllability, and integration in the
@@ -219,37 +222,38 @@
         <div class="collapse" id="collapseExamples">
           <div class="card card-body">
             <p>
-              <strong><span class="big-letter">C</span></strong>rime increasing and its consequences is one of
-              the obvious manifestations of urbanization development. The
-              inefficiency of urban spaces such as inefficient urban furniture
-              and disregard for its practical and aesthetic values has been
-              recognized as one of the most influential factors in crime in
-              cities. Lack of context-based design, ignoring the needs of
-              residents, and mere copying of modern equipment, has emptied the
-              furniture of today's cities from aesthetic and functional values
-              to inefficient elements and visual and even environmental
-              pollutants. This leads to abandonment of urban spaces and non-use
-              of equipment, and there is no doubt that there is a high
-              correlation between the absence of humans as observer eyes in
-              urban space and the increase in crime and sabotage in these
-              spaces. The purpose of this study is to provide an urban furniture
-              design framework to help urban furniture design` to prevent crime
-              and improve quality of life. The method of this research is based
-              on a descriptive aspect rather than an exploratory one and
-              introduces the necessary principles, features, and considerations
-              in the field of anti-crime urban furniture. The data used for
-              explanation have been obtained from collecting, describing, and
-              organizing documentary and library resources in the form of
-              subject research. To maintain the effectiveness of urban spaces,
-              the physical and psychological aspects must be compatible between
-              the qualitative elements and the social and cultural
-              characteristics of the citizens. Psychologically, increasing
-              traffic and lighting in environments with high crime rates and
-              designing happy environments can prevent crime and reduce fear of
-              crime. It is noted that the use of urban furniture as one of the
-              tools of environmental design in crime prevention is considered, a
-              design guide in five dimensions including practical criteria about
-              the design of urban furniture with a crime prevention approach is
+              <strong><span class="big-letter">C</span></strong
+              >rime increasing and its consequences is one of the obvious
+              manifestations of urbanization development. The inefficiency of
+              urban spaces such as inefficient urban furniture and disregard for
+              its practical and aesthetic values has been recognized as one of
+              the most influential factors in crime in cities. Lack of
+              context-based design, ignoring the needs of residents, and mere
+              copying of modern equipment, has emptied the furniture of today's
+              cities from aesthetic and functional values to inefficient
+              elements and visual and even environmental pollutants. This leads
+              to abandonment of urban spaces and non-use of equipment, and there
+              is no doubt that there is a high correlation between the absence
+              of humans as observer eyes in urban space and the increase in
+              crime and sabotage in these spaces. The purpose of this study is
+              to provide an urban furniture design framework to help urban
+              furniture design` to prevent crime and improve quality of life.
+              The method of this research is based on a descriptive aspect
+              rather than an exploratory one and introduces the necessary
+              principles, features, and considerations in the field of
+              anti-crime urban furniture. The data used for explanation have
+              been obtained from collecting, describing, and organizing
+              documentary and library resources in the form of subject research.
+              To maintain the effectiveness of urban spaces, the physical and
+              psychological aspects must be compatible between the qualitative
+              elements and the social and cultural characteristics of the
+              citizens. Psychologically, increasing traffic and lighting in
+              environments with high crime rates and designing happy
+              environments can prevent crime and reduce fear of crime. It is
+              noted that the use of urban furniture as one of the tools of
+              environmental design in crime prevention is considered, a design
+              guide in five dimensions including practical criteria about the
+              design of urban furniture with a crime prevention approach is
               presented. <br />
               <br />
               <strong>Keywords:</strong> Urban furniture design, urban space,
@@ -277,5 +281,68 @@
         </p>
       </div>
     </div>
+    <footer id="contact-me">
+      <div class="container">
+        <div class="text-muted mt-5 d-flex justify-content-between">
+          <div class="d-flex justify-content-center ms-5">
+            <div>
+              <img
+                src="/images/profile-pic.png"
+                alt=""
+                class="img-fluid d-inline p-2 m-0"
+                width="80px"
+              />
+            </div>
+            <div>
+              <p class="contact-me mt-3 me-5 pe-5">
+                Ahmad Farkhondeh <br />Industrial Designer
+              </p>
+            </div>
+          </div>
+
+          <div class="contact-me">
+            <i
+              class="fa fa-envelope email-icon pe-2 pb-2 pt-3"
+              aria-hidden="true"
+            ></i
+            >ahmadfarkhondeh1997@gmail.com
+
+            <br />
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            +989368125532
+          </div>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <div>
+            <a
+              href="https://www.linkedin.com/in/ahmad-farkhondeh/"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
+            ></a>
+          </div>
+          <div>
+            <a
+              href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
+              target="_blank"
+            >
+              <i class="fa-brands fa-researchgate m-2"></i
+            ></a>
+          </div>
+          <div>
+            <a
+              href="https://orcid.org/0009-0007-1695-1563
+"
+              target="_blank"
+            >
+              <i class="fa-brands fa-orcid m-2"></i
+            ></a>
+          </div>
+        </div>
+
+        <p class="contact-me text-center text-muted mb-5">
+          © Ahmad Farkhondeh All Rights Reserved <br />coded by Ahmad Farkhondeh
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
