--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
     <div class="about-me-wrapper text-center pt-2 pb-3">
       <h1 class="mt-3"><span class="about"> About</span> Me</h1>
 
-      <video width="75%" controls class="mt-3" autoplay>
+      <video width="75%" controls class="mt-3 aboutme-video" autoplay>
         <source src="/images/intro-website.MP4" type="video/mp4" />
       </video>
-      <div class="cv m-5">
+      <div class="cv">
         <h3 class="text-start">Education</h3>
         <p class="text-start master">
           <strong>M. A. in Industrial Design </strong>| 2020-2023
@@ -185,66 +185,70 @@
     </div>
     <footer id="contact-me">
       <div class="container">
-        <div class="text-muted mt-5 d-flex justify-content-between">
-          <div class="d-flex justify-content-center ms-5">
-            <div>
-              <img
-                src="/images/profile-pic.png"
-                alt=""
-                class="img-fluid d-inline p-2 m-0"
-                width="80px"
-              />
-            </div>
-            <div>
-              <p class="contact-me mt-3 me-5 pe-5">
-                Ahmad Farkhondeh <br />Industrial Designer
-              </p>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="d-flex justify-content-center">
+              <div>
+                <img
+                  src="/images/profile-pic.png"
+                  alt=""
+                  class="img-fluid d-inline p-2 m-0"
+                  width="80px"
+                />
+              </div>
+              <div class="contact-me mt-3 text-muted">
+                  Ahmad Farkhondeh <br />Industrial Designer
+              </div>
             </div>
           </div>
-
-          <div class="contact-me">
-            <i
-              class="fa fa-envelope email-icon pe-2 pb-2 pt-3"
-              aria-hidden="true"
-            ></i
-            >ahmadfarkhondeh1997@gmail.com
-
-            <br />
-            <i class="fa fa-phone" aria-hidden="true"></i>
-            +989368125532
+          <div class="col-lg-4"></div>
+          <div class="col-lg-4 text-start">
+            <div class="contact-me">
+              <i
+                class="fa fa-envelope email-icon pe-1 pb-2 pt-3"
+                aria-hidden="true"
+              ></i>
+              <span class="contact-me-content"
+                >ahmadfarkhondeh1997@gmail.com</span
+              >
+              <br />
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <span class="contact-me-content"> +989368125532</span>
+            </div>
           </div>
         </div>
-        <div class="social-links d-flex justify-content-center">
-          <div>
-            <a
-              href="https://www.linkedin.com/in/ahmad-farkhondeh/"
-              target="_blank"
-              ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
-            ></a>
-          </div>
-          <div>
-            <a
-              href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
-              target="_blank"
-            >
-              <i class="fa-brands fa-researchgate m-2"></i
-            ></a>
-          </div>
-          <div>
-            <a
-              href="https://orcid.org/0009-0007-1695-1563
-"
-              target="_blank"
-            >
-              <i class="fa-brands fa-orcid m-2"></i
-            ></a>
-          </div>
-        </div>
-
-        <p class="contact-me text-center text-muted mb-5">
-          © Ahmad Farkhondeh All Rights Reserved <br />coded by Ahmad Farkhondeh
-        </p>
       </div>
+
+      <div class="social-links d-flex justify-content-center">
+        <div>
+          <a
+            href="https://www.linkedin.com/in/ahmad-farkhondeh/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
+          ></a>
+        </div>
+        <div>
+          <a
+            href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
+            target="_blank"
+          >
+            <i class="fa-brands fa-researchgate m-2"></i
+          ></a>
+        </div>
+        <div>
+          <a
+            href="https://orcid.org/0009-0007-1695-1563
+"
+            target="_blank"
+          >
+            <i class="fa-brands fa-orcid m-2"></i
+          ></a>
+        </div>
+      </div>
+
+      <p class="contact-me text-center text-muted mb-5">
+        © Ahmad Farkhondeh All Rights Reserved <br />coded by Ahmad Farkhondeh
+      </p>
     </footer>
   </body>
 </html>
