--- a/portfolio.html
+++ b/portfolio.html
@@ -298,72 +298,78 @@
         class="img-fluid mb-2"
       />
     </div>
-    <a href="/portfolio.html#top-section" class="btn go-top">
-      <strong>Go Top</strong></a
-    >
+    <div class="text-center">
+      <a href="/portfolio.html#top-section" class="btn go-top shadow">
+        <strong>Go To The Top Of the Page</strong></a
+      >
+    </div>
 
     <footer id="contact-me">
       <div class="container">
-        <div class="text-muted mt-5 d-flex justify-content-between">
-          <div class="d-flex justify-content-center ms-5">
-            <div>
-              <img
-                src="/images/profile-pic.png"
-                alt=""
-                class="img-fluid d-inline p-2 m-0"
-                width="80px"
-              />
-            </div>
-            <div>
-              <p class="contact-me mt-3 me-5 pe-5">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="d-flex justify-content-center">
+              <div>
+                <img
+                  src="/images/profile-pic.png"
+                  alt=""
+                  class="img-fluid d-inline p-2 m-0"
+                  width="80px"
+                />
+              </div>
+              <div class="contact-me mt-3 text-muted">
                 Ahmad Farkhondeh <br />Industrial Designer
-              </p>
+              </div>
             </div>
           </div>
-
-          <div class="contact-me">
-            <i
-              class="fa fa-envelope email-icon pe-2 pb-2 pt-3"
-              aria-hidden="true"
-            ></i
-            >ahmadfarkhondeh1997@gmail.com
-
-            <br />
-            <i class="fa fa-phone" aria-hidden="true"></i>
-            +989368125532
+          <div class="col-lg-4"></div>
+          <div class="col-lg-4 text-start">
+            <div class="contact-me">
+              <i
+                class="fa fa-envelope email-icon pe-1 pb-2 pt-3"
+                aria-hidden="true"
+              ></i>
+              <span class="contact-me-content"
+                >ahmadfarkhondeh1997@gmail.com</span
+              >
+              <br />
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <span class="contact-me-content"> +989368125532</span>
+            </div>
           </div>
         </div>
-        <div class="social-links d-flex justify-content-center">
-          <div>
-            <a
-              href="https://www.linkedin.com/in/ahmad-farkhondeh/"
-              target="_blank"
-              ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
-            ></a>
-          </div>
-          <div>
-            <a
-              href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
-              target="_blank"
-            >
-              <i class="fa-brands fa-researchgate m-2"></i
-            ></a>
-          </div>
-          <div>
-            <a
-              href="https://orcid.org/0009-0007-1695-1563
-"
-              target="_blank"
-            >
-              <i class="fa-brands fa-orcid m-2"></i
-            ></a>
-          </div>
-        </div>
-
-        <p class="contact-me text-center text-muted mb-5">
-          © Ahmad Farkhondeh All Rights Reserved <br />coded by Ahmad Farkhondeh
-        </p>
       </div>
+
+      <div class="social-links d-flex justify-content-center">
+        <div>
+          <a
+            href="https://www.linkedin.com/in/ahmad-farkhondeh/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
+          ></a>
+        </div>
+        <div>
+          <a
+            href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
+            target="_blank"
+          >
+            <i class="fa-brands fa-researchgate m-2"></i
+          ></a>
+        </div>
+        <div>
+          <a
+            href="https://orcid.org/0009-0007-1695-1563
+"
+            target="_blank"
+          >
+            <i class="fa-brands fa-orcid m-2"></i
+          ></a>
+        </div>
+      </div>
+
+      <p class="contact-me text-center text-muted mb-5">
+        © Ahmad Farkhondeh All Rights Reserved <br />coded by Ahmad Farkhondeh
+      </p>
     </footer>
   </body>
 </html>
